# advent-of-code-2021

./: .gitignore  .sample.env  run.sh
aoc/: Cargo.toml
aoc/aoc-core/src/: lib.rs
aoc/day-16/: Cargo.toml  README.md
aoc/day-16/src/: lib.rs  packet.rs  parser_utils.rs
aoc/day-17/: Cargo.toml
aoc/day-17/src/: lib.rs
aoc/day-18/: Cargo.toml
aoc/day-18/src/: lib.rs  parse.rs  tree.rs
aoc/driver/: Cargo.toml
aoc/driver/src/: main.rs
day-01/: 01.v  day-01
day-02/: 02.v  day-02
scripts/: compile  download-data  run
src/: 01.v  02.v  03.v  08.py
src/aoc-2021-04/: Cargo.toml
src/aoc-2021-04/src/: main.rs
src/aoc-2021-05/: Cargo.toml
src/aoc-2021-05/src/: main.rs
src/aoc-2021-06/: Cargo.toml
src/aoc-2021-06/src/: main.rs
src/aoc-2021-07/: Cargo.toml
src/aoc-2021-07/src/: main.rs
src/aoc-2021-09/: Cargo.toml
src/aoc-2021-09/src/: main.rs
src/aoc-2021-10/: Cargo.toml
src/aoc-2021-10/src/: main.rs
src/aoc-2021-11/: Cargo.toml
src/aoc-2021-11/src/: main.rs
src/aoc-2021-12/: Cargo.toml
src/aoc-2021-12/src/: main.rs
src/aoc-2021-13/: Cargo.toml
src/aoc-2021-13/src/: main.rs
src/aoc-2021-14/: Cargo.toml
src/aoc-2021-14/src/: main.rs
src/aoc-2021-15/: Cargo.toml  hacky_sol.py
src/aoc-2021-15/src/: main.rs
